--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -71,9 +71,12 @@
     <Compile Include="Assets\Scripts\CheckPointChecker.cs" />
     <Compile Include="Assets\Scripts\DisableOverTime.cs" />
     <Compile Include="Assets\Scripts\MainMenu.cs" />
+    <Compile Include="Assets\Scripts\MusicManager.cs" />
     <Compile Include="Assets\Scripts\PlaySoundOnCollision.cs" />
     <Compile Include="Assets\Scripts\RaceInfoManager.cs" />
     <Compile Include="Assets\Scripts\RaceManager.cs" />
+    <Compile Include="Assets\Scripts\RacerSelectButton.cs" />
+    <Compile Include="Assets\Scripts\TrackSelectButton.cs" />
     <Compile Include="Assets\Scripts\UIManager.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
